[package]
name = "cpals"
version = "0.1.0"
authors = ["Stephen Halwes <shalwes@pretalen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
hex = "0.4.2"
base64 = { git = "https://github.com/genonullfree/base64.git" }
